# attestation-agent

./: Cargo.toml  tree
.github/workflows/: release.yml
app/: Cargo.toml
attester/: Cargo.toml
attester/src/: lib.rs
coco_keyprovider/: Cargo.toml
kbc/: Cargo.toml
kbs_protocol/: Cargo.toml
kbs_protocol/src/: types.rs
lib/: Cargo.toml
sample_keyprovider/: Cargo.toml
sample_keyprovider/src/enc_mods/sample_enc/: crypto.rs
src/kbc_modules/offline_fs_kbc/: common.rs
