[workspace]
members = [
    "app",
    "lib",
    "kbc",
    "kbs_protocol",
    "attester",
    "deps/resource_uri",
    "deps/crypto",
    "deps/sev",
    "coco_keyprovider",
    "test-binaries"
]

[workspace.package]
version = "0.1.0"
authors = ["The Confidential Container Authors"]
description = "Attestation Agent"
documentation = "https://github.com/confidential-containers/attestation-agent"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.56"
base64 = ">=0.13.0"
bumpalo = ">=3.12.0"
cfg-if = "1.0.0"
clap = "3.2.5"
const_format = "0.2.30"
cookie = ">=0.16.2"
env_logger = "0.9.0"
futures-task = ">=0.3.27"
futures-util = ">=0.3.27"
generic-array = ">=0.14.6"
kbs-types = "0.3"
lazy_static = "1.4.0"
log = "0.4.14"
memoffset = ">=0.6.5"
mio = ">=0.8.6"
nix = ">=0.23.2"
openssl = ">=0.10.52"
os_str_bytes = ">=66.5.0"
prost = ">=0.11.9"
regex = ">=1.7.2"
resource_uri = { path = "deps/resource_uri" }
security-framework = ">=2.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = ">=1.10"
strum = { version = "0.24.0", features = ["derive"] }
tokio = ">=1.28.1"
tokio-rustls = ">=0.24.0"
tonic = ">=0.9.2"
tonic-build = ">=0.9.2"
untrusted = ">=0.7.1"
url = "2.3.1"
zeroize = "1.5.7"
